[all-ajax, styles] fixing opacity transistion not showing when replace child, so use innerHTML instead

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@
 
 #page {
     opacity: 1;
-    transition: opacity 1s ease-in-out;
-    -webkit-transition: opacity 1s ease-in-out;
+    transition: opacity .5s ease-in-out;
+    -webkit-transition: opacity .5s ease-in-out;
 }
 
 body.page-loading.ajax-loading #page {
